--- a/README.rdoc
+++ b/README.rdoc
@@ -2,7 +2,7 @@
 
 Baton is a server written in node that implements the publish-side of Basic HTTP Push Relay Protocol (http://pushmodule.slact.net/protocol.html) combined with a subscriber interface based on Socket.IO (http://socket.io/).
 
-To put it another way, REST-ful on the backend, and WebSocket-y on the front end.
+To put it another way, REST-ful on the backend, and WebSocket-y on the front end. Call it a mullet for the modern web.
 
 == Example
 
@@ -29,15 +29,29 @@ Tests are in Ruby's RSpec. Test dependencies can be installed with `bundle insta
 == TODO
 
   * Now
-    * Port tests to a JS framework
     * Concurrency specs
     * Way for the client to report the last timestamp it has seen to avoid duplicate messages on reconnection
     * Refactor pub.js
     * Finish README
     * Stress test
+    * Refactor to abstract storage and pub/sub mechanism
+    * Clean up debug output on tests
+    * Timestamps / "last message seen" protocol
   * Future version
+    * Port tests to a JS framework
     * Redis pub/sub on the backend
+    * Stats endpoint
+    * Logging
   
+== Concurrency
+
+Zero or more subscribers may be subscribed to a channel at any given time. All subscribers to a channel will
+receive messages published to that channel. Baton does not currently support other concurrency models, such
+as limiting a channel to one active subscriber.
+
+== Namespacing Channels
+
+There is no programmatic support for channel groups or namespaces. All channels exist in a common namespace from Baton's perspective. A naming convention may be used to create groups of channels.
 
 == Configuration
 
@@ -46,6 +60,7 @@ TODO: write this section
 == Credits
 
 Luke Melia <http://www.lukemelia.com> is the author and maintainer of baton.
+
 Thanks to Leo P. for the Nginx HTTP Push Module and the Basic HTTP Push Relay Protocol
 
 == License
